--- a/sonar.properties
+++ b/sonar.properties
@@ -3,3 +3,5 @@ sonar.projectName=devops-accelrator
 sonar.projectVersion=1.0
 sonar.sources=client/src
 sonar.sourceEncoding=UTF-8
+sonar.language=js
+sonar.exclusions=**/node_modules/**
