--- a/sonar.properties
+++ b/sonar.properties
@@ -3,5 +3,5 @@ sonar.projectName=devops-accelrator
 sonar.projectVersion=1.0
 sonar.sources=client/src
 sonar.sourceEncoding=UTF-8
-sonar.language=js
+sonar.language=nodejs
 sonar.exclusions=**/node_modules/**
