--- a/sonar.properties
+++ b/sonar.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=DA
 sonar.projectName=devops-accelrator
 sonar.projectVersion=1.0
-sonar.sources=client/src
+sonar.sources=./
 sonar.sourceEncoding=UTF-8
-sonar.language=nodejs
+sonar.language=js
 sonar.exclusions=**/node_modules/**
