placeholder files for development

--- a/sonar.properties
+++ b/sonar.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=DA
-sonar.projectName=devops-accelrator
+sonar.projectName=devops-accelerator
 sonar.projectVersion=1.0
 sonar.sources=./
 sonar.sourceEncoding=UTF-8
-sonar.language=js
-sonar.exclusions=**/node_modules/**
+sonar.language=nodejs
+sonar.exclusions=**/node_modules/**,client/**
