--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
     "test": "nyc --reporter=lcov mocha --exit"
   },
   "dependencies": {
@@ -13,6 +14,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
     "express": "~4.16.0",
+    "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": ">=5.7.5",
     "morgan": "~1.9.0",
@@ -24,6 +26,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.2.2",
+    "nodemon": "^2.0.2",
     "nyc": "^15.0.0"
   }
 }
